--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,8 @@ jobs:
           node-version: 18
 
       # Step 3: Install dependencies inside frontend
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
+     - name: Install dependencies
+       run: npm ci
 
       # Step 4: Build project inside frontend
       - name: Build project
