--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,12 @@ jobs:
           node-version: 18
 
       # Step 3: Install dependencies inside frontend
-     - name: Install dependencies
-       run: npm ci
+      - name: Install dependencies
+        run: cd frontend && npm ci
 
       # Step 4: Build project inside frontend
       - name: Build project
-        run: |
-          cd frontend
-          npm run build
+        run: cd frontend && npm run build
 
       # Step 5: Deploy to Netlify
       - name: Deploy to Netlify
